@@ -41,6 +41,8 @@ $EPrints::XML::PREFIX = "XML::LibXML::";
 # DOM spec fixes
 ##############################################################################
 
+*XML::LibXML::NodeList::length = \&XML::LibXML::NodeList::size;
+
 ##############################################################################
 # GDOME compatibility
 ##############################################################################
